# liborza-qt

./: .gitignore  CMakeLists.txt  liborza.pro
LV2/: UIDriver.cpp  moc_IOPortChanger.cpp  moc_IOPortChanger.cpp_parameters  moc_PresetDropdown.cpp  moc_PresetDropdown.cpp_parameters  moc_WindowLayout.cpp  moc_WindowLayout.cpp_parameters
Widget/Events/: RemoveClickEvent.h
src/: CMakeLists.txt  Resources.qrc
src/LV2/: ControlChange.h  IOPortChanger.cpp  IOPortChanger.h  PluginArea.ui  PortContainer.h  PresetDropdown.cpp  PresetDropdown.h  UIDriver.cpp  UIDriver.h  WindowLayout.cpp  WindowLayout.h
src/Layouts/: Layout.h  LayoutLoader.cpp  LayoutLoader.h  LayoutRepository.h  LayoutWriter.h
src/MidiControl/: Control.cpp  Control.h  Control.ui  ControlPort.cpp  ControlPort.h  ControlPort.ui  ControlPortValue.cpp  ControlPortValue.h
src/Resource/: Icons.cpp  Icons.h
src/Settings/: Layout.cpp  Layout.h  MidiDeviceDropdown.cpp  MidiDeviceDropdown.h  PresetDropdown.h  PresetLoader.cpp  PresetLoader.h  SettingsLayout.ui
src/Settings/Events/: InputChangeEvent.h  OutputChangeEvent.cpp  OutputChangeEvent.h  moc_OutputChangeEvent.cpp_parameters
src/Widget/: AbstractDropdown.h  AbstractIODropdown.h  AbstractPluginDropdown.cpp  AbstractPluginDropdown.h  BaseLineEdit.h  EffectDropdown.cpp  EffectDropdown.h  InputDropdown.cpp  InputDropdown.h  MidiNoteDropdown.cpp  MidiNoteDropdown.h  OutputDropdown.cpp  OutputDropdown.h  PatchBay.ui  PatchBayItem.ui  Patchbay.cpp  Patchbay.h  PatchbayPlugin.cpp  PatchbayPlugin.h  Popup.h  SimpleChangeEvent.h.todo  SingleInstrument.cpp  SingleInstrument.h  SingleInstrument.ui  Spoiler.h  TreeNode.cpp  TreeNode.h
src/Widget/Events/: ActivateClickEvent.h  NodeRemoveEvent.h  RemoveClickEvent.h
